agrego targey blank

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,8 +38,8 @@
                 <p>
                     Estudiante de UADE
                 </p>
-                <a id="boton" href="https://dapereyra.github.io/portfolio-cv-uade/">Ir al Portafolio</a>
-                <a id="boton" href="https://www.figma.com/design/JSufmZyxPyn0h4XGNQMvf1/cv-uade-v1?node-id=0-1&t=XLEb3Pi1h7RcIKm1-1">Ir al Figma</a>
+                <a id="boton" target="_blank" href="https://dapereyra.github.io/portfolio-cv-uade/">Ir al Portafolio</a>
+                <a id="boton" target="_blank" href="https://www.figma.com/design/JSufmZyxPyn0h4XGNQMvf1/cv-uade-v1?node-id=0-1&t=XLEb3Pi1h7RcIKm1-1">Ir al Figma</a>
             </div>
             <div class="card">
                 <img src="./img/fotocarnetleo.jpg" alt="imagenFondo">
