--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <p>En HighTech, nos dedicamos a ofrecer soluciones tecnológicas innovadoras para impulsar el crecimiento de tu negocio. Nuestro equipo de expertos está comprometido con la excelencia y la satisfacción del cliente.</p>
+                    <p>Nuestros servicios incluyen diseño web, desarrollo de aplicaciones, marketing digital y mucho más. Trabajamos con empresas de todos los tamaños y sectores para ayudarles a alcanzar sus objetivos.</p>
                 </div>
                 <div class="about-image">
                     <img src="img/istockphoto-1387945043-612x612.jpg" alt="Sobre Nosotros">
