--- a/nosotros.html
+++ b/nosotros.html
@@ -49,8 +49,8 @@
                 <p>
                     Estudiante de UADE
                 </p>
-                <div id="boton">Ir al Portafolio</div>
-                <div id="boton">Ir al Figma</div>
+                <a id="boton" target="_blank" href="http://leonelpalavecino510.github.io">Ir al Portafolio</a>
+                <a id="boton" target="_blank" href="https://www.figma.com/design/M9ZYHHtrKKQnePa0X8bAQi/Proyecto-Resume?node-id=0-1&node-type=canvas&t=19tJcn07cO2KKbxq-0">Ir al Figma</a>
             </div>
         </section>
     </main>
