--- a/nosotros.html
+++ b/nosotros.html
@@ -1,88 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HighTech</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="logo">
-            <img src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" alt="Logo Empresa">
-        </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-        <ul class="nav-links">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
-            <li><a href="soporte.html">Soporte</a></li>
-            <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
-        </ul>
+      <div class="logo">
+        <img
+          src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png"
+          alt="Logo Empresa"
+        />
+      </div>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      <ul class="nav-links">
+        <li><a href="index.html">INICIO</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="portafolio.html">Portafolio</a></li>
+        <li><a href="soporte.html">Soporte</a></li>
+        <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
+      </ul>
     </nav>
 
-    
-    <main>
-        <section class="cards">
-            <div class="card">
-                <img src="./img/Foto_carnet.JPG" alt="imagenFondo">
-                <p>
-                    Damián E. Pereyra
-                </p>
-                <p>
-                    Estudiante de UADE
-                </p>
-                <a id="boton" target="_blank" href="https://dapereyra.github.io/portfolio-cv-uade/">Ir al Portafolio</a>
-                <a id="boton" target="_blank" href="https://www.figma.com/design/JSufmZyxPyn0h4XGNQMvf1/cv-uade-v1?node-id=0-1&t=XLEb3Pi1h7RcIKm1-1">Ir al Figma</a>
-            </div>
-            <div class="card">
-                <img src="./img/fotocarnetleo.jpg" alt="imagenFondo">
-                <p>
-                    Leonel Palavecino
-                </p>
-                <p>
-                    Estudiante de UADE
-                </p>
-                <a id="boton" target="_blank" href="http://leonelpalavecino510.github.io">Ir al Portafolio</a>
-                <a id="boton" target="_blank" href="https://www.figma.com/design/M9ZYHHtrKKQnePa0X8bAQi/Proyecto-Resume?node-id=0-1&node-type=canvas&t=19tJcn07cO2KKbxq-0">Ir al Figma</a>
-            </div>
-        </section>
+    <main class="main-nosotros">
+      <h1>Nosotros</h1>
+      <div class="contenedor-cards-nosotros">
+        <div class="card-nosotros">
+          <div class="card-nosotros-img">
+            <img src="./img/cards/erika_img.jpg" alt="Foto Erika" />
+          </div>
+          <div class="card-nosotros-texto">
+            <p>Erika Farias</p>
+          </div>
+          <div class="card-nosotros-botones">
+            <button>Portfolio</button>
+            <button>Prototipo</button>
+          </div>
+        </div>
+        <div class="card-nosotros">
+          <div class="card-nosotros-img">
+            <img src="./img/cards/cecilia_img.jpg" alt="Foto Cecilia" />
+          </div>
+          <div class="card-nosotros-texto">
+            <p>Cecilia Saldaña</p>
+          </div>
+          <div class="card-nosotros-botones">
+            <button>Portfolio</button>
+            <button>Prototipo</button>
+          </div>
+        </div>
+        <div class="card-nosotros">
+          <div class="card-nosotros-img">
+            <img src="./img/cards/leonel_img.jpg" alt="Foto Leonel" />
+          </div>
+          <div class="card-nosotros-texto">
+            <p>Leonel Palavecino</p>
+          </div>
+          <div class="card-nosotros-botones">
+            <button>Portfolio</button>
+            <button>Prototipo</button>
+          </div>
+        </div>
+        <div class="card-nosotros">
+          <div class="card-nosotros-img">
+            <img src="./img/cards/damian_img.JPG" alt="Foto Damián" />
+          </div>
+          <div class="card-nosotros-texto">
+            <p>Damián Pereyra</p>
+          </div>
+          <div class="card-nosotros-botones">
+            <button>Portfolio</button>
+            <button>Prototipo</button>
+          </div>
+        </div>
+        <div class="card-nosotros">
+          <div class="card-nosotros-img">
+            <img src="./img/cards/petro_img.jfif" alt="Foto Petro" />
+          </div>
+          <div class="card-nosotros-texto">
+            <p>Petro Nouel</p>
+          </div>
+          <div class="card-nosotros-botones">
+            <button>Portfolio</button>
+            <button>Prototipo</button>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-section">
-                <h3>Sobre Nosotros</h3>
-                <p>Somos una empresa dedicada a brindar los mejores servicios para el crecimiento de tu negocio.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#about">Sobre Nosotros</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+      <div class="footer-container">
+        <div class="footer-section">
+          <h3>Sobre Nosotros</h3>
+          <p>
+            Somos una empresa dedicada a brindar los mejores servicios para el
+            crecimiento de tu negocio.
+          </p>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+        <div class="footer-section">
+          <h3>Enlaces Rápidos</h3>
+          <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#services">Servicios</a></li>
+            <li><a href="#about">Sobre Nosotros</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
         </div>
+        <div class="footer-section">
+          <h3>Síguenos</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
