Estilo botones, fix inicio

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 equipo de expertos está comprometido con la excelencia y la
                 satisfacción del cliente.
               </p>
+              <button>Contacto</button>
             </div>
             <div class="about-image">
               <img
