--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 equipo de expertos está comprometido con la excelencia y la
                 satisfacción del cliente.
               </p>
-              <button>Contacto</button>
+              <button>
+                <a href="./contacto.html" target="”_blank”">Contacto</a>
+              </button>
             </div>
             <div class="about-image">
               <img
