links portfolios y prototipos

--- a/nosotros.html
+++ b/nosotros.html
@@ -41,8 +41,20 @@
             <p>Erika Farias</p>
           </div>
           <div class="card-nosotros-botones">
-            <button>Portfolio</button>
-            <button>Prototipo</button>
+            <button title="Portfolio">
+              <a
+                href="https://erikafarias.github.io/portfolio/"
+                target="”_blank”"
+                >Portfolio</a
+              >
+            </button>
+            <button title="Portfolio">
+              <a
+                href="https://www.figma.com/design/CSwWiRjP6Ybx9uIafRQPXw/Portfolio?node-id=0-1&node-type=canvas&t=Cf2wK6SauUyi4cC5-0"
+                target="”_blank”"
+                >Prototipo</a
+              >
+            </button>
           </div>
         </div>
         <div class="card-nosotros">
@@ -53,8 +65,12 @@
             <p>Cecilia Saldaña</p>
           </div>
           <div class="card-nosotros-botones">
-            <button>Portfolio</button>
-            <button>Prototipo</button>
+            <button title="Portfolio">
+              <a href="" target="”_blank”">Portfolio</a>
+            </button>
+            <button title="Portfolio">
+              <a href="" target="”_blank”">Prototipo</a>
+            </button>
           </div>
         </div>
         <div class="card-nosotros">
@@ -65,8 +81,20 @@
             <p>Leonel Palavecino</p>
           </div>
           <div class="card-nosotros-botones">
-            <button>Portfolio</button>
-            <button>Prototipo</button>
+            <button title="Portfolio">
+              <a
+                href="https://leonelpalavecino510.github.io/Portafolio-personal/"
+                target="”_blank”"
+                >Portfolio</a
+              >
+            </button>
+            <button title="Prototipo">
+              <a
+                href="https://www.figma.com/design/M9ZYHHtrKKQnePa0X8bAQi/Proyecto-Resume?node-id=0-1&node-type=canvas&t=19tJcn07cO2KKbxq-0"
+                target="”_blank”"
+                >Prototipo</a
+              >
+            </button>
           </div>
         </div>
         <div class="card-nosotros">
@@ -77,8 +105,20 @@
             <p>Damián Pereyra</p>
           </div>
           <div class="card-nosotros-botones">
-            <button>Portfolio</button>
-            <button>Prototipo</button>
+            <button title="Portfolio">
+              <a
+                href="https://dapereyra.github.io/portfolio-cv-uade/"
+                target="”_blank”"
+                >Portfolio</a
+              >
+            </button>
+            <button title="Portfolio">
+              <a
+                href="https://www.figma.com/design/JSufmZyxPyn0h4XGNQMvf1/cv-uade-v1?node-id=0-1&t=XLEb3Pi1h7RcIKm1-1"
+                target="”_blank”"
+                >Prototipo</a
+              >
+            </button>
           </div>
         </div>
         <div class="card-nosotros">
@@ -89,8 +129,20 @@
             <p>Petro Nouel</p>
           </div>
           <div class="card-nosotros-botones">
-            <button>Portfolio</button>
-            <button>Prototipo</button>
+            <button title="Portfolio">
+              <a
+                href="https://petronoueluade.github.io/UVA01_Entrega/"
+                target="”_blank”"
+                >Portfolio</a
+              >
+            </button>
+            <button title="Portfolio">
+              <a
+                href="https://www.figma.com/design/uYPNq5a82frwjxCy6und1c/nouel_portfolio_uade?node-id=0-1&t=WmOtPcIjH61SIxKB-1"
+                target="”_blank”"
+                >Prototipo</a
+              >
+            </button>
           </div>
         </div>
       </div>
