services page and styles

--- a/servicios.html
+++ b/servicios.html
@@ -1,64 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HighTech</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="logo">
-            <img src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" alt="Logo Empresa">
-        </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-        <ul class="nav-links">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
-            <li><a href="soporte.html">Soporte</a></li>
-            <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
-        </ul>
+      <div class="logo">
+        <img
+          src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png"
+          alt="Logo Empresa"
+        />
+      </div>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      <ul class="nav-links">
+        <li><a href="index.html">INICIO</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="portafolio.html">Portafolio</a></li>
+        <li><a href="soporte.html">Soporte</a></li>
+        <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
+      </ul>
     </nav>
     <main>
-        <section class="services-section" id="services">
-           
-        </section>
+      <div class="services-section">
+        <div class="service-title">
+          <h1>Servicios</h1>
+        </div>
+        <div class="service-hero">
+          <div class="service-hero-content">
+            <p>
+              En HighTech, nos especializamos en desarrollar soluciones de
+              software innovadoras que impulsan el éxito de tu negocio. Nuestro
+              equipo de desarrolladores y especialistas en tecnología está
+              dedicado a brindarte un soporte integral, asegurando que tus
+              sistemas operen de manera eficiente y sin contratiempos.
+            </p>
+          </div>
+        </div>
+        <div class="service-cards">
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-desarrollo.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Desarrollo de Soluciones Digitales</h3>
+              <p>
+                Desarrollamos aplicaciones a la medida que impulsan tu negocio.
+                Desde plataformas móviles hasta aplicaciones web, nuestras
+                soluciones están diseñadas para mejorar la eficiencia y ofrecer
+                experiencias excepcionales al usuario
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-soporte.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Soporte Tecnico</h3>
+              <p>
+                Soporte técnico especializado para asegurar el óptimo
+                funcionamiento de tus sistemas y aplicaciones. Nuestro equipo de
+                expertos está disponible para resolver cualquier problema
+                técnico de forma rápida y eficiente.
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-marketing.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Marketing Digital</h3>
+              <p>
+                Potenciamos tu negocio con soluciones de marketing digital
+                personalizadas. Desde estrategias SEO hasta campañas en redes
+                sociales, te ayudamos a llegar a tu público objetivo de manera
+                efectiva.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="service-testimonials">
+          <div class="service-testimonial">
+            <div class="service-testimonial-content">
+              <p>
+                <strong>Juan Pérez, CEO de Innovatech Solutions:</strong>
+                "El equipo de HighTech superó nuestras expectativas. Nos
+                ayudaron a desarrollar una aplicación personalizada que ha
+                transformado la manera en que operamos. Su nivel de
+                profesionalismo y atención al detalle es impresionante. No
+                podríamos estar más satisfechos con el resultado."
+              </p>
+            </div>
+          </div>
+
+          <div class="service-testimonial">
+            <div class="service-testimonial-content">
+              <p>
+                <strong>Laura García, Directora de Marketing en Trendy Media:</strong>
+                "Trabajar con HighTech ha sido una experiencia increíble.
+                Gracias a su enfoque en soluciones digitales y estrategias de
+                marketing, nuestra presencia online ha crecido exponencialmente.
+                Su soporte es siempre rápido y eficiente, y han sido clave en
+                nuestro crecimiento."
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-section">
-                <h3>Sobre Nosotros</h3>
-                <p>Somos una empresa dedicada a brindar los mejores servicios para el crecimiento de tu negocio.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#about">Sobre Nosotros</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+      <div class="footer-container">
+        <div class="footer-section">
+          <h3>Sobre Nosotros</h3>
+          <p>
+            Somos una empresa dedicada a brindar los mejores servicios para el
+            crecimiento de tu negocio.
+          </p>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+        <div class="footer-section">
+          <h3>Enlaces Rápidos</h3>
+          <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#services">Servicios</a></li>
+            <li><a href="#about">Sobre Nosotros</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
         </div>
+        <div class="footer-section">
+          <h3>Síguenos</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
