--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 satisfacción del cliente.
               </p>
               <button>
-                <a href="./contacto.html" target="”_blank”">Contacto</a>
+                <a href="./contacto.html">Contacto</a>
               </button>
             </div>
             <div class="about-image">
