cambio estructura y estilos header

--- a/soporte.html
+++ b/soporte.html
@@ -7,25 +7,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar">
+    <header class="header">
+      <nav class="navbar">
         <div class="logo">
-            <img src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" alt="Logo Empresa">
+          <a href="./index.html"
+            ><img
+              src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png"
+              alt="Logo Empresa"
+          /></a>
         </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
         <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </label>
         <ul class="nav-links">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
-            <li><a href="soporte.html">Soporte</a></li>
-            <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
+          <li><a href="index.html" >Inicio</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="portafolio.html">Portafolio</a></li>
+          <li><a href="soporte.html"class="active">Soporte</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
-    </nav>
+      </nav>
+    </header>
     <main id="support-services">
         <section class="support-section" id="support">
             <div class="support-intro">
