--- a/servicios.html
+++ b/servicios.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HighTech</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <nav class="navbar">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="navbar">
         <div class="logo">
-            <img src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" alt="Logo Empresa">
+          <a href="./index.html"
+            ><img
+              src="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png"
+              alt="Logo Empresa"
+          /></a>
         </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
         <label for="menu-toggle" class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </label>
         <ul class="nav-links">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
-            <li><a href="soporte.html">Soporte</a></li>
-            <li class="contact-btn"><a href="contacto.html">Contacto</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="servicios.html" class="active">Servicios</a></li>
+          <li><a href="portafolio.html">Portafolio</a></li>
+          <li><a href="soporte.html">Soporte</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
-    </nav>
+      </nav>
+    </header>
     <main>
-        <section class="services-section" id="services">
-           
-        </section>
+      <section class="services-section" id="services"></section>
     </main>
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-section">
-                <h3>Sobre Nosotros</h3>
-                <p>Somos una empresa dedicada a brindar los mejores servicios para el crecimiento de tu negocio.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#services">Servicios</a></li>
-                    <li><a href="#about">Sobre Nosotros</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+      <div class="footer-container">
+        <div class="footer-section">
+          <h3>Sobre Nosotros</h3>
+          <p>
+            Somos una empresa dedicada a brindar los mejores servicios para el
+            crecimiento de tu negocio.
+          </p>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+        <div class="footer-section">
+          <h3>Enlaces Rápidos</h3>
+          <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#services">Servicios</a></li>
+            <li><a href="#about">Sobre Nosotros</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
         </div>
+        <div class="footer-section">
+          <h3>Síguenos</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
