estrcutura y estilos footer

--- a/servicios.html
+++ b/servicios.html
@@ -124,36 +124,22 @@
         </div>
       </div>
     </main>
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-section">
-          <h3>Sobre Nosotros</h3>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-materia">
+          <p>Materia: Diseño y Desarrollo Web</p>
+          <p>Curso: 493154</p>
+          <p>Grupo: 4</p>
+        </div>
+        <div class="footer-copyright">
           <p>
-            Somos una empresa dedicada a brindar los mejores servicios para el
-            crecimiento de tu negocio.
+            &copy; Todos los derechos reservados. Sitio desarrollado para fines
+            educativos. 2024
           </p>
         </div>
-        <div class="footer-section">
-          <h3>Enlaces Rápidos</h3>
-          <ul>
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#services">Servicios</a></li>
-            <li><a href="#about">Sobre Nosotros</a></li>
-            <li><a href="#contact">Contacto</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Síguenos</h3>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2024 MiSitio. Todos los derechos reservados.</p>
+      <div class="logo-uade">
+        <img src="./img/LogoUADE.png" alt="Logo UADE" />
       </div>
     </footer>
   </body>
