--- a/soporte.html
+++ b/soporte.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" />
     <title>HighTech</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
