Agrega imagen y links a portfolio cs.

--- a/nosotros.html
+++ b/nosotros.html
@@ -70,10 +70,10 @@
           </div>
           <div class="card-nosotros-botones">
             <button title="Portfolio">
-              <a href="" target="”_blank”">Portfolio</a>
+              <a href="https://cesaldana-edu.github.io/ddw-professional-porfolio/" target="”_blank”">Portfolio</a>
             </button>
             <button title="Portfolio">
-              <a href="" target="”_blank”">Prototipo</a>
+              <a href="https://www.figma.com/design/iTYyRCtiOmPdGoeU18XMVI/DDW-Personal-Portfolio?node-id=0-1&t=Kfby4W3LwKIcxVyK-1" target="”_blank”">Prototipo</a>
             </button>
           </div>
         </div>
