Agrega link a mapa

--- a/contacto.html
+++ b/contacto.html
@@ -85,7 +85,7 @@
           <h2>Nuestras Oficinas</h2>
           <div class="row">
             <div class="col-50 map">
-              <a href=""><img src="img/nuestras-oficinas.png" alt="Mapa"></a>
+              <a href="https://maps.app.goo.gl/YSC1z9zWSRRByDP67" target="_blank"><img src="img/nuestras-oficinas.png" alt="Mapa"></a>
             </div>
             <div class="col-50 address">
               <p><b>Dirección:</b> Lima 757 - C1073AAO, Ciudad Autónoma de Buenos Aires</p>
