--- a/portafolio.html
+++ b/portafolio.html
@@ -26,20 +26,98 @@
         <ul class="nav-links">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="portafolio.html" class="active">Portafolio</a></li>
+          <li><a href="servicios.html" class="active">Servicios</a></li>
+          <li><a href="portafolio.html">Portafolio</a></li>
           <li><a href="soporte.html">Soporte</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <section>
-        <div class="services-section" id="services"></div>
-      </section>
-    </main>
+      <div class="services-section">
+        <div class="service-title">
+          <h1>Portafolio</h1>
+        </div>
+        <div class="service-hero">
+          <div class="service-hero-content">
+            <p>
+              En HighTech, transformamos ideas en soluciones tecnológicas innovadoras. Nuestro portafolio refleja la diversidad y calidad de nuestros proyectos, desde aplicaciones web hasta software personalizado para cada uno de nuestros clientes. Cada trabajo es el resultado de un enfoque colaborativo y una profunda comprensión de las necesidades de nuestros clientes. Te invitamos a explorar nuestras creaciones para entender cómo podemos ayudarte a llevar tus necesidades al siguente nivel.¡Día a día, código a código!
+            </p>
+          </div>
+        </div>
+        <div class="service-cards">
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-desarrollo.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Desarrollo de Soluciones Digitales</h3>
+              <p>
+                Desarrollamos aplicaciones a la medida que impulsan tu negocio.
+                Desde plataformas móviles hasta aplicaciones web, nuestras
+                soluciones están diseñadas para mejorar la eficiencia y ofrecer
+                experiencias excepcionales al usuario
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-soporte.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Soporte Tecnico</h3>
+              <p>
+                Soporte técnico especializado para asegurar el óptimo
+                funcionamiento de tus sistemas y aplicaciones. Nuestro equipo de
+                expertos está disponible para resolver cualquier problema
+                técnico de forma rápida y eficiente.
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <div class="service-card-image service-card-content">
+              <img src="img/servicio-marketing.png" alt="Servicio 1" />
+            </div>
+            <div class="service-card-content">
+              <h3>Marketing Digital</h3>
+              <p>
+                Potenciamos tu negocio con soluciones de marketing digital
+                personalizadas. Desde estrategias SEO hasta campañas en redes
+                sociales, te ayudamos a llegar a tu público objetivo de manera
+                efectiva.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="service-testimonials">
+          <div class="service-testimonial">
+            <div class="service-testimonial-content">
+              <p>
+                <strong>Juan Pérez, CEO de Innovatech Solutions:</strong>
+                "El equipo de HighTech superó nuestras expectativas. Nos
+                ayudaron a desarrollar una aplicación personalizada que ha
+                transformado la manera en que operamos. Su nivel de
+                profesionalismo y atención al detalle es impresionante. No
+                podríamos estar más satisfechos con el resultado."
+              </p>
+            </div>
+          </div>
 
+          <div class="service-testimonial">
+            <div class="service-testimonial-content">
+              <p>
+                <strong>Laura García, Directora de Marketing en Trendy Media:</strong>
+                "Trabajar con HighTech ha sido una experiencia increíble.
+                Gracias a su enfoque en soluciones digitales y estrategias de
+                marketing, nuestra presencia online ha crecido exponencialmente.
+                Su soporte es siempre rápido y eficiente, y han sido clave en
+                nuestro crecimiento."
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="footer-content">
         <div class="footer-materia">
