--- a/soporte.html
+++ b/soporte.html
@@ -99,7 +99,7 @@
             </div>
         </section>
         
-        <section class="sup-details" id="soporte-tecnico">
+        <section class="sup-details" id="soporte-tecnico"  style="margin-bottom: 50px;">
             <div class="sup-section">
                 <img src="https://media.istockphoto.com/id/653836738/es/foto/pone-el-pro-del-programador.jpg?s=612x612&w=0&k=20&c=hoJG2VRAh34nUGZuNxixIDZ13ioNKINOJY8S3lpkulk=" alt="Icono de mantenimiento 3">
                 <div>
