--- a/portafolio.html
+++ b/portafolio.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="img/png-transparent-orange-blue-and-black-logo-logo-circle-technology-circle-blue-text-information-technology-thumbnail.png"
+    />
     <title>HighTech</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -26,8 +34,8 @@
         <ul class="nav-links">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="servicios.html" class="active">Servicios</a></li>
-          <li><a href="portafolio.html">Portafolio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="portafolio.html" class="active">Portafolio</a></li>
           <li><a href="soporte.html">Soporte</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -41,78 +49,67 @@
         <div class="service-hero">
           <div class="service-hero-content">
             <p>
-              En HighTech, transformamos ideas en soluciones tecnológicas innovadoras. Nuestro portafolio refleja la diversidad y calidad de nuestros proyectos, desde aplicaciones web hasta software personalizado para cada uno de nuestros clientes. Cada trabajo es el resultado de un enfoque colaborativo y una profunda comprensión de las necesidades de nuestros clientes. Te invitamos a explorar nuestras creaciones para entender cómo podemos ayudarte a llevar tus necesidades al siguente nivel.¡Día a día, código a código!
+              En HighTech, transformamos ideas en soluciones tecnológicas
+              innovadoras. Nuestro portafolio refleja la diversidad y calidad de
+              nuestros proyectos, desde aplicaciones web hasta software
+              personalizado para cada uno de nuestros clientes. Cada trabajo es
+              el resultado de un enfoque colaborativo y una profunda comprensión
+              de las necesidades de nuestros clientes. Te invitamos a explorar
+              nuestras creaciones para entender cómo podemos ayudarte a llevar
+              tus necesidades al siguente nivel.¡Día a día, código a código!
             </p>
           </div>
         </div>
-        <div class="service-cards">
-          <div class="service-card">
-            <div class="service-card-image service-card-content">
-              <img src="img/servicio-desarrollo.png" alt="Servicio 1" />
+        <div class="portfolio-cards">
+          <div class="portfolio-card">
+            <div class="service-card-image portfolio-card-content">
+              <img src="img/HighTech.PNG" alt="Servicio 1" />
             </div>
-            <div class="service-card-content">
-              <h3>Desarrollo de Soluciones Digitales</h3>
-              <p>
-                Desarrollamos aplicaciones a la medida que impulsan tu negocio.
-                Desde plataformas móviles hasta aplicaciones web, nuestras
-                soluciones están diseñadas para mejorar la eficiencia y ofrecer
-                experiencias excepcionales al usuario
-              </p>
-            </div>
-          </div>
-          <div class="service-card">
-            <div class="service-card-image service-card-content">
-              <img src="img/servicio-soporte.png" alt="Servicio 1" />
-            </div>
-            <div class="service-card-content">
-              <h3>Soporte Tecnico</h3>
-              <p>
-                Soporte técnico especializado para asegurar el óptimo
-                funcionamiento de tus sistemas y aplicaciones. Nuestro equipo de
-                expertos está disponible para resolver cualquier problema
-                técnico de forma rápida y eficiente.
-              </p>
+            <div class="portfolio-card-content">
+              <h3>HighTech: Soluciones de Software</h3>
+              <button title="Prototipo Figma">
+                <a
+                  href="https://www.figma.com/design/tXcx5GrkMImglwveD2YzEQ/GRUPO04-1erParcial?node-id=0-1&node-type=canvas&t=JVTqfMbVcwmnfpj2-0"
+                  target="”_blank”"
+                  ><i class="fa-brands fa-figma"></i> Prototipo Figma
+                </a>
+              </button>
+              <button title="Sitio web">
+                <a
+                  href="https://dapereyra.github.io/servicios_profesionales-uva2/"
+                  target="”_blank”"
+                  ><i class="fa-solid fa-globe"></i> Sitio Web</a
+                >
+              </button>
             </div>
           </div>
-          <div class="service-card">
-            <div class="service-card-image service-card-content">
-              <img src="img/servicio-marketing.png" alt="Servicio 1" />
+          <div class="portfolio-card">
+            <div class="service-card-image portfolio-card-content">
+              <img src="img/CircoMaravillas.PNG" alt="Servicio 1" />
             </div>
-            <div class="service-card-content">
-              <h3>Marketing Digital</h3>
-              <p>
-                Potenciamos tu negocio con soluciones de marketing digital
-                personalizadas. Desde estrategias SEO hasta campañas en redes
-                sociales, te ayudamos a llegar a tu público objetivo de manera
-                efectiva.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="service-testimonials">
-          <div class="service-testimonial">
-            <div class="service-testimonial-content">
-              <p>
-                <strong>Juan Pérez, CEO de Innovatech Solutions:</strong>
-                "El equipo de HighTech superó nuestras expectativas. Nos
-                ayudaron a desarrollar una aplicación personalizada que ha
-                transformado la manera en que operamos. Su nivel de
-                profesionalismo y atención al detalle es impresionante. No
-                podríamos estar más satisfechos con el resultado."
-              </p>
-            </div>
-          </div>
-
-          <div class="service-testimonial">
-            <div class="service-testimonial-content">
-              <p>
-                <strong>Laura García, Directora de Marketing en Trendy Media:</strong>
-                "Trabajar con HighTech ha sido una experiencia increíble.
-                Gracias a su enfoque en soluciones digitales y estrategias de
-                marketing, nuestra presencia online ha crecido exponencialmente.
-                Su soporte es siempre rápido y eficiente, y han sido clave en
-                nuestro crecimiento."
-              </p>
+            <div class="portfolio-card-content">
+              <h3>Circo Maravillas</h3>
+              <button title="Prototipo Figma">
+                <a
+                  href="https://www.figma.com/design/Ge8E0ABMVmwSC11iAQYO51/Circo-maravillas?node-id=0-1&node-type=canvas&t=XBYODmk2PA0rXKbY-0"
+                  target="”_blank”"
+                  ><i class="fa-brands fa-figma"></i> Prototipo Figma
+                </a>
+              </button>
+              <button title="Sitio web">
+                <a
+                  href="https://erikafarias.github.io/circo_maravillas/"
+                  target="”_blank”"
+                  ><i class="fa-solid fa-globe"></i> Sitio Web</a
+                >
+              </button>
+              <button title="Sitio Avances">
+                <a
+                  href="https://dapereyra.github.io/lecirque_avance_uade/index.html"
+                  target="”_blank”"
+                  ><i class="fa-solid fa-globe"></i> Sitio Avances</a
+                >
+              </button>
             </div>
           </div>
         </div>
